# bluetooth_firmware_updater_qt

./: CMakeLists.txt  README.md  bluetooth-firmware-updater.pro  easy-firmware-updater.pro  main.cpp  spp-firmware-updater.pro  spp-fw-updater.pro  updater.cpp  updater.h
app/: updater.cpp  updater.h
src/: fwupd.cpp  fwupd.h  main.cpp  updater.cpp  updater.h
